--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logger\Logger.cs" />
+    <Compile Include="Logger\LoggerTimeStampMode.cs" />
+    <Compile Include="Logger\LoggerVerbosity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StreamDeck.cs" />
   </ItemGroup>
