--- a/Framework/Framework.csproj
+++ b/Framework/Framework.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Colour.cs" />
+    <Compile Include="ImageUtilities.cs" />
     <Compile Include="Logger\Logger.cs" />
     <Compile Include="Logger\LoggerTimeStampMode.cs" />
     <Compile Include="Logger\LoggerVerbosity.cs" />
